refactor: 优化cookie管理，实现笔记划线的同步